src/test/resources/invalid/typecheck/Callable_NoValue.vas
class Parent is
    this() is
    end

    var a: Integer = getInt(empty())

    method getInt(i : Integer): Integer is
        return i.mul(2)
    end

    method empty() is
    end

end